chore: avoid horizontal overflow in testing app (#2600)
Removes some horizontal scrolling in the local development app.

--- a/src/demo-app/demo-app/demo-app.scss
+++ b/src/demo-app/demo-app/demo-app.scss
@@ -44,4 +44,5 @@ body {
 .demo-content {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
 }
